# Track-Record

./: .gitignore  Doxyfile  README.md  drone.cpp
GUI/: CMakeLists.txt
GUI/Gui/: CMakeLists.txt
GUI/Gui/.qt/: QtDeploySupport.cmake
GUI/Gui/src/: mainwindow.cpp  mainwindow.ui
GUI/server/: README.md
GUI/server/Assets/: links
GUI/server/src/controller/: MyController.hpp
GUI/src/GUI/: main.cpp  mainwindow.cpp  mainwindow.h  styles.css
Schematics/: Track-Record-PCB.kicad_pcb  Track-Record-sch.sch
Schematics/v2/: Track-Record-PCB.kicad_pcb  Track-Record.pro
Solidworks/: 2DofStand.SLDASM  2DofStand.SLDPRT  2DofStandv2.SLDASM  2DofStandv2.SLDPRT
Solidworks/Components/: Case.SLDPRT  HORN-D.SLDPRT  Parallax-900-00005-08-25-Servo-CR-HSCR-STD.SLDASM  SCREW-1.7x24.SLDASM  Screw_3x8.SLDPRT  b1.SLDPRT  b2.SLDPRT  b3.SLDPRT  b4.SLDPRT
Solidworks/Components/Cameras/: CameraModule3.SLDPRT
Solidworks/Components/Nema_17_right_angle_gearbox_with_spiral_bevel_gears__372530/: LICENSE.txt  README.txt
Solidworks/MechanicalDrawings/Parallax-900-00005-08-25-Servo-CR-HSCR-STD/: Parallax-900-00005-08-25-Servo-CR-HSCR-STD.err
Solidworks/MechanicalDrawings/Parallax-Continuous-Rotation-Servo-downloads-3881/: 900-00008-Continuous-Rotation-Servo-Calibration-SX28-Code.SXB
Solidworks/Parts/Standv1/: Bracket(bottom).SLDPRT  Bracket(top).SLDPRT  CameraMount.SLDPRT  MotorHub(bottom).SLDPRT  MotorHub(top).SLDPRT
Solidworks/Parts/Standv2/: Base.SLDPRT  MotorHub.SLDPRT  Panmount.SLDPRT  Pin_inner.SLDPRT  Pin_outer.SLDPRT  TiltMount.SLDPRT  ~$Pin_outer.SLDPRT
Solidworks/Stls/: 2DofStandv2 - Base-1.STL  2DofStandv2 - Panmount-1.STL  2DofStandv2 - Pin_inner-1.STL  2DofStandv2 - Pin_outer-1.STL  2DofStandv2 - TiltMount-1.STL  Base_old.STL
Solidworks/TestingAssemblies/: Assem1.SLDASM
Solidworks/test/: 2DofStandv2 - CameraModule3-1.STL  2DofStandv2 - TiltMount-1.STL  2DofStandv2 - TowerPro SG92R Servo Motor-1.STL  2DofStandv2 - TowerPro SG92R Servo Motor-2.STL  2DofStandv2 - hub-1.STL  2DofStandv2 - hub-2.STL
docs/: annotated.html  classes.html  classmovement-members.html  classmovement__inherit__graph.map  classmovement__inherit__graph.md5  classrecognition.html  classrecognition__coll__graph.map  classrecognition__inherit__graph.md5  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_e6a3bc903578042e978a7c67d57c1f12.html  functions.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html
docs/html/: annotated.html  classmovement-members.html  classmovement.html  classmovement__inherit__graph.map  classmovement__inherit__graph.md5  classrecognition-members.html  classrecognition.html  classrecognition__coll__graph.md5  classrecognition__inherit__graph.map  dir_2101cd0b22112584ff59816a4bc911f7.html  dir_5c982d53a68cdbcd421152b4020263a9.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  md_main_src__r_e_a_d_m_e.html  menudata.js  pages.html
docs/html/search/: all_4.js  all_7.js  all_8.js  classes_0.js  functions_1.js  pages_0.js  variables_0.js  variables_3.js  variables_4.js
docs/latex/: annotated.tex  classmovement.tex  classmovement__inherit__graph.md5  classrecognition.tex  classrecognition__inherit__graph.md5  index.tex  md_main_src__r_e_a_d_m_e.tex  refman.tex
docs/search/: all_1.js  all_2.js  functions_2.js  variables_2.js  variables_5.js
doxygen-doc/html/: _g_u_i1__0__autogen_2moc__predefs_8h_source.html  annotated.html  class_face_detection-members.html  class_face_detection.html  class_main_window-members.html  class_main_window.html  class_main_window__coll__graph.map  class_main_window__coll__graph.md5  class_motor-members.html  class_motor.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui___main_window-members.html  class_ui___main_window.html  classes.html  classmovement-members.html  classmovement.html  classrecognition-members.html  classrecognition.html  client__autogen_2moc__predefs_8h_source.html  demo_8h_source.html  dir_0052c436a34fe797835f7599eb95e473.html  dir_02a8a2b062dc325e6617d234207a6ce8.html  dir_03118806133ff983dda6d2be2aac7491.html  dir_0a7c614c1e619b7715120f54c323f1f4.html  dir_0f80427b2c7119fe709485a7ece19b20.html  dir_116066c72e63e80c760e4902e5beeb85.html  dir_12095c90ba23c67fb427027385b9445a.html  dir_14cd0691a8ede0b74dbfc826514cccf9.html  dir_1523249298743f3081586eeba2586a22.html  dir_16ce1e19e8ee69f94878ddfdfc877123.html  dir_172e6a2df501d8dbaff18c7b0eca6209.html  dir_189fec4c7693f84e0f88dc23db87e4bf.html  dir_19f4f34d18318b9d3dd9963d0cfd2167.html  dir_1ab6284136e4c9b02bd567a8a04501cf.html  dir_1e4c7c333b2702f464315223a21a5426.html  dir_1fbcb84a115c7bf376edeab5bfb52889.html  dir_20ee9266557b7a033b4c2dd936223998.html  dir_262cf3fbe00a31fba4ebbcb8981fde5a.html  dir_2a3c5b502fb9b8f1d5167fcb2223904f.html  (+71 more)
doxygen-doc/html/search/: all_0.js  all_1.js  all_2.js  (+19 more)
doxygen-doc/latex/: annotated.tex  class_face_detection.tex  class_main_window.tex  class_main_window__coll__graph.md5  class_motor.tex  class_ui_1_1_main_window.tex  class_ui___main_window.tex  classmovement.tex  classmovement__inherit__graph.md5  classrecognition.tex  classrecognition__inherit__graph.md5  hierarchy.tex  index.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_q_t___w_a_r_n_i_n_g___d_i_s_a_b_l_e___d_e_p_r_e_c_a_t_e_d_1_1qt__meta__stringdata___main_window__t.tex
face detection/: CMakeLists.txt  demo
face detection/src/: client.cpp  demo.cpp  server.cpp
face detection/src/GUI/: mainwindow.cpp  mainwindow.h
face-detection/src/: demo.cpp  demo.h
local/: CMakeLists.txt
local/src/GUI/: debug.cpp  mainwindow.cpp  mainwindow.ui  styles.css
main/: CMakeLists.txt  source.cpp
main/src/: client.cpp  demo.cpp  source.cpp
main_refactor/: CMakeLists.txt  source.cpp
motor/: move.cpp  move.h
motor moving/: CMakeLists.txt  move.cpp
source/: CMakeLists.txt  demo.cpp
source_v1/: CMakeLists.txt  source
source_v1_pan/: source.cpp
tests/: CMakeLists.txt  Test cases  test_module.cpp
tests/move/: move.cpp
(+9 files in other folders)
